# AED_Project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
Esquema/: c9c2f635-eab9-459a-be97-f05339bc74dc.sketchpad
code/header/: App.h  Change.h  Class.h  Display.h  Request.h  Schedule.h  Student.h  Subject.h  Uc.h
code/source/: App.cpp  Change.cpp  Class.cpp  Display.cpp  Request.cpp  Schedule.cpp  Student.cpp  Subject.cpp  Uc.cpp
doc/html/: _app_8h.html  _app_8h_source.html  _change_8h.html  _change_8h_source.html  _class_8h.html  _class_8h_source.html  _display_8h.html  _display_8h_source.html  _r_e_a_d_m_e_8md.html  _request_8h.html  _request_8h_source.html  _schedule_8h.html  _schedule_8h_source.html  _student_8h.html  _student_8h_source.html  _subject_8h.html  _subject_8h_source.html  _uc_8h.html  _uc_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_change-members.html  class_change.html  class_class-members.html  class_class.html  class_class_change-members.html  class_class_change.html  class_display-members.html  class_display.html  class_request-members.html  class_request.html  class_schedule-members.html  class_schedule.html  class_student-members.html  class_student.html  class_subject-members.html  class_subject.html  class_u_c.html  class_uc-members.html  (+19 more)
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_4.js  classes_5.js  files_4.js  files_5.js  functions_0.js  pages_0.js  (+14 more)
schedule/: students_classes.csv
